# ruscord-backend

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  livekit.yaml  manage.py  pyproject.toml  req.txt
.github/workflows/: backend.yml
app_channels/: models.py  serializers.py  urls.py  views.py
app_channels/migrations/: 0001_initial.py  0002_initial.py
app_friends/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
app_friends/migrations/: 0001_initial.py  0002_initial.py
app_messages/: consumers.py  models.py  routing.py  views.py
app_messages/migrations/: 0001_initial.py  0002_initial.py  0004_remove_message_channel.py
app_users/: models.py  serializers.py  urls.py  views.py
app_users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py
ruscord/: asgi.py  settings.py  urls.py  wsgi.py
src/app_auth/: base_auth.py  livekit_utils.py  serializers.py  urls.py  views.py
src/app_channels/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/app_channels/migrations/: 0001_initial.py  0002_initial.py  0003_rename_directmessagechannel_channels.py  0004_rename_channels_channel.py
src/app_friends/: admin.py  models.py  serializers.py  urls.py  views.py
src/app_friends/migrations/: 0001_initial.py  0002_initial.py
src/app_gateway/: routing.py
src/app_gateway/consumers/: conversation.py  gateway.py
src/app_gateway/utils/: status.py
src/app_messages/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/app_messages/migrations/: 0001_initial.py  0002_initial.py  0003_message_channel.py  0003_messages_reply_to.py  0004_messages_forwarded_from.py
src/app_servers/: admin.py  models.py  serializers.py  urls.py  views.py
src/app_servers/migrations/: 0001_initial.py  0002_initial.py  0003_invite_short_token.py  0003_server_avatar_server_description.py  0004_alter_server_avatar.py
src/app_users/: models.py  serializers.py  urls.py  views.py
src/app_users/migrations/: 0001_initial.py
src/ruscord/: asgi.py  middleware.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  storage.py  urls.py  utils.py
