[tool.poetry]
name = "ruscord-backend"
version = "0.1.0"
description = ""
authors = ["Timofey Tsepennikov <tta@biznpro.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.5.0"
pillow = "^11.0.0"
channels = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
